# WiFlyer

./: .gitignore  .gitmodules  CMakeLists.txt  EspWait.hpp  FlightPhase.hpp  Flyer.cpp  Flyer.hpp  FlyerCalibration.cpp  I2CBus.hpp  Navigator.hpp  PID.hpp  PWM.hpp  ProtoBoardConfig.hpp  QuadcopterAircraft.hpp  Remote.cpp  Remote.hpp  SensorsImpl.cpp  TaskLoop.hpp  TaskNotification.hpp  Telemetry.hpp  Waveshare10DOF.cpp  Waveshare10DOF.hpp  WiFi.c  WiFi.cpp  WiFi.hpp  main.cpp  motors.cpp  partitions.csv
main/: CMakeLists.txt  EspWait.hpp  Flyer.cpp  Flyer.hpp  FlyerCalibration.cpp  Kconfig.projbuild  Messages.hpp  Motor.hpp  MotorPWM.hpp  Remote.cpp  Remote.hpp  Sonar.cpp  Sonar.hpp  Telemetry.hpp  Waveshare10DOF.cpp  Waveshare10DOF.hpp  WiFi.cpp  motors.cpp
